--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,7 @@
 *{
     padding: 0px;
     margin: 0px;
-    /* background-color: black !important;; */
+     /*background-color: rgb(2, 65, 68);*/
+     
+    
 }
