--- a/frontend/src/Pages/Home/home.css
+++ b/frontend/src/Pages/Home/home.css
@@ -1,17 +1,25 @@
+
 .filterRow{
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 20px;
+    background-color: rgb(46, 41, 35);
 
 }
 
 .data-table {
     border-collapse: collapse;
+    border-style: 5px solid;
+    background-color: rgb(46, 41, 35);
+    
+    margin: 0px;
+
   }
   
 .data-table thead th {
-    background-color: #f5f5f5;
+    background-color: #0f0101;
+    color: azure;
 }
 
 .icons-handle{
@@ -29,16 +37,41 @@
     justify-content: center;
     gap: 10px;
     margin-bottom: 10px;
+    border-color: black;
+    border-style: solid;
+    border-width: 5px;
 }
   
-/* .data-table tbody tr:hover {
-    background-color: #f5f5f5;
+.data-table tbody tr {
+    background-color: #047416;
     cursor: pointer;
+    color: rgb(192, 224, 8);
+    padding:5px ;
+    margin-bottom: 15px;
+    font-weight: bolder;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+.data-table tbody tr:hover {
+    background-color: #b60899;
+    cursor: pointer;
+    color: black;
+   
+    box-shadow: 2px 2px 2px 0px black;
+ 
+  min-height: 9px;
 }
   
 .data-table tbody tr:nth-child(even) {
-    background-color: #f8f8f8;
-} */
+    background-color: #044e29;
+    color: rgb(192, 224, 8);
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bolder;
+} 
+ 
+.data-table tbody tr:nth-child(even):hover {
+    background-color: #af0ba7;
+    color: black;
+} 
 
 .containerBtn{
     display: flex;
@@ -50,6 +83,8 @@
 }
 .mobileBtn{
     display: none !important;
+    background-color: rgb(2, 70, 13);
+    color: #ebe0e0;
 }
 
 .iconBtnBox{
@@ -58,32 +93,33 @@
     justify-content: center;
     gap: 10px;
     padding: 10px;
-    border: 2px solid white;
+    border: 2px solid rgb(248, 239, 239);
     border-radius: 8px;
-    
-
 }
 
 .iconActive{
-    background-color: white;
+    background-color: rgb(16, 202, 32);
     color: black;
 }
 .iconDeactive{
-    background-color: rgb(78, 74, 78);
+    background-color: rgb(243, 238, 243);
     color: black;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 415px) {
+   
     .filterRow {
         padding: 0px !important;
         margin-top: 0px !important;
-        display: flex;
-        gap: "5px";
-        
+        display: inline-flex;
+       gap:10px !important;
+     
     }
     .addNew{
         /* padding-top: 20px; */
         display: none !important;
+        background-color: #047416;
+        padding:0px
     }
     .mobileBtn{
         display: inline-block !important;
